partman-base (118) UNRELEASED; urgency=low

  * init.d/parted: minor code improvements.
  * Apply patch by Ian Campbell and Ferenc Wagner to improve display of Xen
    virtual disks in partman. With thanks to both. Closes: #474556.
  * In lowmem mode it is possible that newly loaded support for a file system
    is not "seen" because depmod has not been run after loading the kernel
    udeb. Therefore, run depmod when partman is started.

 -- Frans Pop <fjp@debian.org>  Wed, 30 Apr 2008 02:34:56 +0200

partman-base (117) unstable; urgency=low

  [ Colin Watson ]
  * Don't emit confusing log messages if partman-lvm or partman-crypto are
    already loaded.
  * Support preseeding questions asked through ask_user using the name of
    the plugin responsible for the answer you want (e.g.
    partman-auto/init_automatically_partition=biggest_free).
  * Fix parted_devices check for floppy devices, broken by me in
    partman-base 100 (sorry!).
  * Allow disable_swap to take a device argument, in which case it only
    disables swap on that device rather than on all devices.
  * Only disable swap on devices that are being changed.

  [ Guido Guenther ]
  * Add multipath support (closes: #442236):
    - recognize and display multipath devices
    - skip physical disks that are part of a multipath device

  [ Frans Pop ]
  * Drop the compatibility symlink for definitions.sh; all other partman
    components have now been uploaded.
  * Change "initialise" to American English spelling (-ize).

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Arabic (ar.po) by Ossama M. Khayat
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Indonesian (id.po) by Arief S Fitrianto
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu